<resources>
    <string name="app_name">whatsappclone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo_grupo">Nuevo grupo</string>
    <string name="nueva_difusion">Nueva difusión</string>
    <string name="chat_web">WhatsApp Web</string>
    <string name="mensajes_destacado">Mensajes destacados</string>
    <string name="ajustes">Ajustes</string>
</resources>