<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/buscar"
        android:icon="@drawable/icono_search"
        android:title="Item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemnuevogrupo"
        android:title="@string/nuevo_grupo" />
    <item
        android:id="@+id/itemnuevadifusion"
        android:title="@string/nueva_difusion" />
    <item
        android:id="@+id/itemweb"
        android:title="@string/chat_web" />
    <item
        android:id="@+id/itemmensajesdestacados"
        android:title="@string/mensajes_destacado" />
    <item
        android:id="@+id/itemajustes"
        android:title="@string/ajustes" />
</menu>